# svg-renderer

./: .gitignore  CMakeLists.txt
src/: bitwise.c  capa.c  circulo.c  color.c  contorno.c  distancia.c  main.c  path.c  pixel.c  ppm.c
src/include/: bitwise.h  capa.h  circulo.h  color.h  contorno.h  distancia.h  multisample.h  path.h  pixel.h  ppm.h
